# dispatchly

./: pyproject.toml
docs/: CNAME  index.html
src/dispatchly/core/: __init__.py
