[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "datarepr>=1.0.0",
    "tofunc>=1.0.0",
]
description = "This project provides an alternative to the singledispatch decorator from functools."
keywords = []
name = "dispatchly"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.6.dev0+local.3"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://dispatchly.johannes-programming.online/"
Download = "https://pypi.org/project/dispatchly/#files"
Index = "https://pypi.org/project/dispatchly/"
Source = "https://github.com/johannes-programming/dispatchly/"
